# bmi-gdal

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: GDALBmi.cpp  GDALBmi.hpp  GDALRasterBmi.cpp  GDALRasterBmi.hpp  bmi.hpp
